<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_extra_media">Add</string>
    <string name="bug_description">Description</string>
    <string name="bug_type">Bug Type</string>
    <string name="bug_type_bug">Bug</string>
    <string name="bug_type_feedback">Feedback</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_report">Cancel</string>
    <string name="clear_extra_media">Clear</string>
    <string name="component_label">Component</string>
    <string name="description_recorder_button_remove">Remove</string>
    <string name="description_recorder_button_start">Start</string>
    <string name="description_recorder_button_stop">Stop</string>
    <string name="description_recorder_label">Record Description</string>
    <string name="description_recorder_preparing">Preparing to record...</string>
    <string name="description_recorder_recording">Recording an audio description...</string>
    <string name="empty_text" />
    <string name="extra_media">Extra Media</string>
    <string name="no_extra_media_added">No extra media added.</string>
    <string name="past_audio_data_consent_label">Past Audio Data</string>
    <string name="past_audio_data_consent_text">Upload past 20 seconds of input and output audio data to help debug the issue.</string>
    <string name="pick_image">Pick Image to Attach</string>
    <string name="screenshot">Screenshot</string>
    <string name="screenshot_consent_text">Upload this screenshot to help debug the issue.</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="submit">Submit</string>
    <string name="submit_heading">Submit Bug Report</string>
</resources>
